Fix code after Mariusz review